2012-??-?? : 1.8.3
	mod_neko+mod_tora : fixed issue with get_client_ip in 64 bits mode /gcc
	mysql : added support for timestamp to date conversion
	std : added merge_sort native implementation

2011-09-10 : 1.8.2
	vm : use 15 digits (instead of 10) for float display
	std : allow up to 512MB array/string size in serialize (instead of 1MB)
	std : bugfix in utf8 (with 4 bytes codes)
	vm : finalizers bugfix on Windows
	std : added sys_thread_cpu_time()
	vm : use VEXTERN for neko_kind_module and neko_id_module
	std : hide process console in process_run
	nekoml : added Math core module
	std : fixed timeout error for sockets on Windows
	mod_tora : added PROXY_MODE configuration
	std : fixed timeout error for sockets on Linux
	vm : fixed $int and $float - return null on invalid strings
	mysql : added result_get_fields_names
	gc : prevent issues with AV softs / GoogleDesktop which inject threads
	vm : use sse2 for fp calculus on gcc (double precision, same as msvc/flash)
		removed in updated build (some CPU are not compatible)
	mysql : added support for BINARY(size) type
	vm : keep stack infos for object/array ops (interp)
	std : added thread_stack
	vm : added $fasthash
	mysql5 : fixed 5.5 protocol change
	std : fixed sha1 for 64-bits (also fix mysql5 auth)
	std : added make_sha1
	mysql : added set_conv_funs for string + bytes wrapping support

2009-07-26 : 1.8.1
	nekoc : small fix in evaluation of using jump tables for switch on integers
	regexp : use a recursion limit to prevent stack overflows in pcre
	mysql5 : completely rewrote mysql client
	mod_tora : complete rearchitecture with abstract protocol
	std : added socket_set_fast_send
	mod_tora : use socket fast send to optimize timing
	mod_tora : fixed bug when .n file does not exists
	mod_tora : fix for Apache 2.x - does not set the content-type if declined
	mod_tora : added port range configuration (for random tora server)
	std, mod_tora : propagate jit mode to created threads